parser/sample_tests/ours/class.txt

*** Error line 1.
class Cow {
^^^^^
*** syntax error

